// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeDate Picker should render correctly 1`] = `
<div>
  <div
    class="bx--form-item"
  >
    <div
      class="bx--date-picker bx--date-picker--range bx--date-picker--nolabel"
      data-testid="input-field-range-date-picker"
      id="TestRangeDatepickerElement--input-field-date-picker"
    >
      <span
        class="bx--date-picker-input__wrapper--relative"
      >
        <div
          class="bx--date-picker-container bx--date-picker--nolabel"
        >
          <div
            class="bx--date-picker-input__wrapper"
          >
            <input
              autocomplete="off"
              class="bx--date-picker__input flatpickr-input"
              id="TestRangeDatepickerElement--range-picker-value-1"
              pattern="d{1,2}/d{1,2}/d{4}"
              placeholder="MM/DD/YYYY"
              type="text"
              value=""
            />
            <svg
              aria-label="Open calendar"
              class="bx--date-picker__icon"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style="will-change: transform;"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13,2h-2V1h-1v1H6V1H5v1H3C2.4,2,2,2.4,2,3v10c0,0.6,0.4,1,1,1h10c0.6,0,1-0.4,1-1V3C14,2.4,13.6,2,13,2z M13,13H3V6h10V13z M13,5H3V3h2v1h1V3h4v1h1V3h2V5z"
              />
              <title>
                Open calendar
              </title>
            </svg>
          </div>
        </div>
        <svg
          aria-hidden="true"
          class="bx--date-picker-input__error bx--date-picker-input__error--hidden"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          style="will-change: transform;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm2.7 10.5L4.5 5.3l.8-.8 6.2 6.2-.8.8z"
          />
          <path
            d="M10.7 11.5L4.5 5.3l.8-.8 6.2 6.2-.8.8z"
            data-icon-path="inner-path"
            fill="none"
            opacity="0"
          />
        </svg>
      </span>
      <span
        class="bx--date-picker-input__wrapper--relative"
      >
        <div
          class="bx--date-picker-container bx--date-picker--nolabel"
        >
          <div
            class="bx--date-picker-input__wrapper"
          >
            <input
              autocomplete="off"
              class="bx--date-picker__input"
              data-fp-omit=""
              id="TestRangeDatepickerElement--range-picker-value-2"
              pattern="d{1,2}/d{1,2}/d{4}"
              placeholder="MM/DD/YYYY"
              type="text"
              value=""
            />
            <svg
              aria-label="Open calendar"
              class="bx--date-picker__icon"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style="will-change: transform;"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13,2h-2V1h-1v1H6V1H5v1H3C2.4,2,2,2.4,2,3v10c0,0.6,0.4,1,1,1h10c0.6,0,1-0.4,1-1V3C14,2.4,13.6,2,13,2z M13,13H3V6h10V13z M13,5H3V3h2v1h1V3h4v1h1V3h2V5z"
              />
              <title>
                Open calendar
              </title>
            </svg>
          </div>
        </div>
        <svg
          aria-hidden="true"
          class="bx--date-picker-input__error bx--date-picker-input__error--hidden"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          style="will-change: transform;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm2.7 10.5L4.5 5.3l.8-.8 6.2 6.2-.8.8z"
          />
          <path
            d="M10.7 11.5L4.5 5.3l.8-.8 6.2 6.2-.8.8z"
            data-icon-path="inner-path"
            fill="none"
            opacity="0"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`RangeDate Picker should render correctly for read-only 1`] = `
<div>
  <time
    class="bx--text-space-left bx--text-space-right bx--rule-value-readonly"
    datetime="2020-12-12T06:00:00.000Z"
  >
    12/12/2020
  </time>
  -
  <time
    class="bx--text-space-left bx--rule-value-readonly"
    datetime="2020-12-15T06:00:00.000Z"
  >
    12/15/2020
  </time>
</div>
`;

exports[`RangeDate Picker should render correctly with a provided value 1`] = `
<div>
  <div
    class="bx--form-item"
  >
    <div
      class="bx--date-picker bx--date-picker--range bx--date-picker--nolabel"
      data-testid="input-field-range-date-picker"
      id="TestRangeDatepickerElement--input-field-date-picker"
    >
      <span
        class="bx--date-picker-input__wrapper--relative"
      >
        <div
          class="bx--date-picker-container bx--date-picker--nolabel"
        >
          <div
            class="bx--date-picker-input__wrapper"
          >
            <input
              autocomplete="off"
              class="bx--date-picker__input flatpickr-input"
              id="TestRangeDatepickerElement--range-picker-value-1"
              pattern="d{1,2}/d{1,2}/d{4}"
              placeholder="MM/DD/YYYY"
              type="text"
              value="12/12/2020"
            />
            <svg
              aria-label="Open calendar"
              class="bx--date-picker__icon"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style="will-change: transform;"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13,2h-2V1h-1v1H6V1H5v1H3C2.4,2,2,2.4,2,3v10c0,0.6,0.4,1,1,1h10c0.6,0,1-0.4,1-1V3C14,2.4,13.6,2,13,2z M13,13H3V6h10V13z M13,5H3V3h2v1h1V3h4v1h1V3h2V5z"
              />
              <title>
                Open calendar
              </title>
            </svg>
          </div>
        </div>
        <svg
          aria-hidden="true"
          class="bx--date-picker-input__error bx--date-picker-input__error--hidden"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          style="will-change: transform;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm2.7 10.5L4.5 5.3l.8-.8 6.2 6.2-.8.8z"
          />
          <path
            d="M10.7 11.5L4.5 5.3l.8-.8 6.2 6.2-.8.8z"
            data-icon-path="inner-path"
            fill="none"
            opacity="0"
          />
        </svg>
      </span>
      <span
        class="bx--date-picker-input__wrapper--relative"
      >
        <div
          class="bx--date-picker-container bx--date-picker--nolabel"
        >
          <div
            class="bx--date-picker-input__wrapper"
          >
            <input
              autocomplete="off"
              class="bx--date-picker__input"
              data-fp-omit=""
              id="TestRangeDatepickerElement--range-picker-value-2"
              pattern="d{1,2}/d{1,2}/d{4}"
              placeholder="MM/DD/YYYY"
              type="text"
              value="12/15/2020"
            />
            <svg
              aria-label="Open calendar"
              class="bx--date-picker__icon"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              style="will-change: transform;"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13,2h-2V1h-1v1H6V1H5v1H3C2.4,2,2,2.4,2,3v10c0,0.6,0.4,1,1,1h10c0.6,0,1-0.4,1-1V3C14,2.4,13.6,2,13,2z M13,13H3V6h10V13z M13,5H3V3h2v1h1V3h4v1h1V3h2V5z"
              />
              <title>
                Open calendar
              </title>
            </svg>
          </div>
        </div>
        <svg
          aria-hidden="true"
          class="bx--date-picker-input__error bx--date-picker-input__error--hidden"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          style="will-change: transform;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm2.7 10.5L4.5 5.3l.8-.8 6.2 6.2-.8.8z"
          />
          <path
            d="M10.7 11.5L4.5 5.3l.8-.8 6.2 6.2-.8.8z"
            data-icon-path="inner-path"
            fill="none"
            opacity="0"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
